# mrf-recognition-service

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
src/: .dev.env  .dockerignore  Dockerfile  Makefile  __init__.py  app.py  app_test.py  config.py  config_test.py  docker-compose.dev.yml  go.mod  main.py  main_fastapi.py  main_test.py  pyproject.toml  test_main.py
src/cmd/: main.go
src/config/: __init__.py
src/database/: __init__.py  alembic.ini  connect.py  model.py
src/database/alembic/versions/: 2023_09_19_1605-init_migration.py
src/database/migrations/: alembic.ini
src/database/query/: __init__.py
src/internal/: __init__.py  config.py  config_test.py
src/internal/database/: __init__.py  dto.py  model.py  model_test.py  query.py  query_test.py
src/internal/database/migrations/: 001_init_migration.down.sql  001_init_migration.up.sql  002_field_value_extend.down.sql  002_field_value_extend.up.sql
src/internal/database/query/: __init__.py  query_test.py
src/internal/service/: dapr_service.py  doc_batch_service.py  file_processing.py  fp_service.py  processing_service.py  recognition.py  recognition_test.py  service_collection.py  template_service.py  user_service.py  workflow_service.py
src/internal/service/database/: model.py
src/internal/transport/: __init__.py  validation.py
src/libraries/: __init__.py  fluent_results.py  test_fluent_results.py
src/recognition_service/: Dockerfile  app.py  app_test.py  build.debug.sh  build.dev.sh  config.py  pyproject.toml
src/recognition_service/database/: batch_queries.py  connect.py  pool.py
src/recognition_service/service/: document_service.py  recognition_service.py  service_collection.py  user_service.py
src/service/: __init__.py  dapr_service.py  doc_batch_service.py  document_service.py  file_processing.py  recognition.py  recognition_service.go  recognition_service.py  recognition_service_test.py  service_collection.py  workflow_service.py
src/service/model/: __init__.py  dtos.py
src/tests/: test_config.py  test_file_processing.py  test_file_upload.py  test_main.py  test_validation.py
src/transport/: __init__.py  api_metadata.py  handler.go  test_controller.go
src/transport/model/: __init__.py  dto.py  validation.py
src/webservice/: Dockerfile  build.dev.sh  config.toml  go.mod  go.sum  main.py
src/webservice/cmd/: main.go
src/webservice/config/: config.go  config_test.go  environment.go
src/webservice/domain/: domain.go  domain_constructors.go
src/webservice/service/: dapr_service.go  doc_processing_service.go  recognition_service.go  recognition_service_test.go  workflow_service.go
src/webservice/transport/: dapr_controller.go  handler.go  test_controller.go  workflows_controller.go
(+111 files in other folders)
